syntax = "proto3";

option csharp_namespace = "HappyCoding.GRpcCommunication.Shared.Services";

package services;

//###########
// SimpleRequestReplyWithStringService

service SimpleRequestReplyWithStringHandler {
  rpc Handle (SimpleRequestWithString) returns (SimpleReplyWithString);
}

message SimpleRequestWithString {
  string name = 1;
}

message SimpleReplyWithString {
  string message = 1;
}